--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -4,7 +4,7 @@ $font-second: 'Raleway';
 /* colors */
 $color-main: #ffffff;
 $color-brand: #ff6c00;
-$color-uppertitle-dark: rgba(157, 164, 189, 0.6);
+$color-uppertitle-light: rgba(157, 164, 189, 0.6);
 $color-text-light: #9da4bd;
 $color-text-dark: #555555;
 $color-slider-bg: rgba(25, 28, 38, 0.2);
