--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -11,7 +11,7 @@ $color-slider-bg: rgba(25, 28, 38, 0.2);
 $color-dark: #303030;
 $color-free: transparent;
 $color-services-bg: #111319;
-$color-barbers-bg: #f7f7f7;
+$color-team-bg: #f7f7f7;
 $color-contacts-bg: #191c26;
 $color-grow-line: rgba(157, 164, 189, 0.12);
 $color-backdrop: rgba(0, 0, 0, 0.2);
