--- a/sass/base/_global.scss
+++ b/sass/base/_global.scss
@@ -10,6 +10,11 @@ p {
     margin: 0;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+}
+
 .container {
     margin-left: auto;
     margin-right: auto;
@@ -140,4 +145,17 @@ p {
     width: 60px;
     background-color: var($color-uppertitle-dark);
     margin-right: 20px;
+}
+
+.hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
