--- a/sass/components/_booking.scss
+++ b/sass/components/_booking.scss
@@ -14,13 +14,12 @@
 }
 
 .booking-form {
-  display: flex;
-  align-items: center;
+  display: flex;  
   gap: 30px;
   margin-bottom: 44px;
 }
 
-.input {
+.booking-form__input {
   width: 260px;
   height: 24px;
   font-weight: 600;
@@ -31,22 +30,22 @@
   color: var(--placeholder-text-color);
   background-color: transparent;
   border: none;
-  border-bottom: 1px solid var(--placeholder-text-color);
+  border-bottom: 1px solid var($color-placeholder-text);
   cursor: pointer;
   transition-property: color;
   transition-duration: 250ms;
-  transition-timing-function: var(--timing-function);
+  transition-timing-function: var($timing-function);
 }
 
-.input:focus,
-.input-comment:focus {
-  color: var(--main-color);
-  border-color: var(--main-color);
+.booking-form__input:focus,
+.booking-form__comment:focus {
+  color: var($color-main);
+  border-color: var($color-main);
   outline: none;
   text-transform: none;
 }
 
-.input-comment {
+.booking-form__comment {
   width: 550px;
   height: 76px;
   font-weight: 600;
@@ -54,15 +53,15 @@
   line-height: calc(15 / 11);
   letter-spacing: 0.1em;
   text-transform: uppercase;
-  color: var(--placeholder-text-color);
+  color: var($color-placeholder-text);
   background-color: transparent;
   border: none;
-  border-bottom: 1px solid var(--placeholder-text-color);
+  border-bottom: 1px solid var($color-placeholder-text);
   cursor: pointer;
   margin-bottom: 44px;
   transition-property: color;
   transition-duration: 250ms;
-  transition-timing-function: var(--timing-function);
+  transition-timing-function: var($timing-function);
 }
 
 textarea {
