--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -12,6 +12,6 @@
     font-size: 14px;
     line-height: calc(26 / 14);
     letter-spacing: 0.02em;
-    color: var($color-text-dark);
+    color: $color-text-dark;
     padding-bottom: 40px;
 }
