--- a/sass/components/_media-links.scss
+++ b/sass/components/_media-links.scss
@@ -16,5 +16,5 @@
     display: block;
     height: 1px;
     width: 60px;
-    background-color: var($color-dark);
+    background-color: $color-dark;
 }
