--- a/sass/base/_global.scss
+++ b/sass/base/_global.scss
@@ -1,6 +1,6 @@
 body {
-    background-color: var($color-main);
-    font-family: var($font-main), sans-serif;
+    background-color: $color-main;
+    font-family: $font-main, sans-serif;
 }
 
 h1,
@@ -8,11 +8,6 @@ h2,
 h3,
 p {
     margin: 0;
-}
-
-img {
-  display: block;
-  max-width: 100%;
 }
 
 .container {
@@ -28,16 +23,16 @@ img {
 }
 
 .link {
-    color: var($color-dark);
+    color: $color-dark;
     text-decoration: none;
     transition-property: color;
     transition-duration: 250ms;
-    transition-timing-function: var($timing-function);
+    transition-timing-function: $timing-function;
 }
 
 .link:hover,
 .link:focus {
-    color: var($color-brand);
+    color: $color-brand;
 }
 
 .btn,
@@ -49,22 +44,22 @@ img {
     letter-spacing: 0.09em;
     text-transform: uppercase;
     min-width: 160px;
-    background-color: var($color-free);
-    border: 1px solid var($color-brand);
+    background-color: $color-free;
+    border: 1px solid $color-brand;
     border-radius: 25px;
     padding: 12px 20px;
     cursor: pointer;
     transition-property: color, background-color;
     transition-duration: 250ms;
-    transition-timing-function: var($timing-function);
+    transition-timing-function: $timing-function;
 }
 
 .btn-light {
-    color: var($color-main);
+    color: $color-main;
 }
 
 .btn-dark {
-    color: var($color-dark);
+    color: $color-dark;
 }
 
 .btn:hover,
@@ -73,8 +68,8 @@ img {
 .btn-light:focus,
 .btn-dark:hover,
 .btn-dark:focus {
-    background-color: var($color-brand);
-    color: var($color-main);
+    background-color: $color-brand;
+    color: $color-main;
 }
 
 .uppertitle {
@@ -83,7 +78,7 @@ img {
     line-height: calc(15 / 11);
     letter-spacing: 0.1em;
     text-transform: uppercase;
-    color: var(--dark-color);
+    color: $color-dark;
     display: flex;
     align-items: center;
     padding-bottom: 20px;
@@ -94,13 +89,13 @@ img {
     display: block;
     height: 1px;
     width: 60px;
-    background-color: var($color-uppertitle-dark);
+    background-color: $color-uppertitle-light;
     margin-right: 20px;
 }
 
 .title-dark,
 .title-light {
-    font-family: var($font-second);
+    font-family: $font-second;
     font-weight: 700;
     font-size: 42px;
     line-height: calc(49 / 42);
@@ -109,12 +104,12 @@ img {
 }
 
 .title-dark {
-    color: var($color-dark);
+    color: $color-dark;
     padding-bottom: 20px;
 }
 
 .title-light {
-    color: var($color-main);
+    color: $color-main;
     padding-bottom: 40px;
 }
 
@@ -122,7 +117,7 @@ img {
     font-size: 18px;
     line-height: calc(30 / 18);
     letter-spacing: 0.02em;
-    color: var($color-text-dark);
+    color: $color-text-dark;
     padding-bottom: 20px;
 }
 
@@ -134,7 +129,7 @@ img {
     line-height: calk(15 / 11);
     letter-spacing: 0.1em;
     text-transform: uppercase;
-    color: var($color-uppertitle-dark);
+    color: $color-uppertitle-light;
     padding-bottom: 20px;
 }
 
@@ -143,7 +138,7 @@ img {
     display: block;
     height: 1px;
     width: 60px;
-    background-color: var($color-uppertitle-dark);
+    background-color: $color-uppertitle-light;
     margin-right: 20px;
 }
 
@@ -158,4 +153,11 @@ img {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+.list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
 }
