--- a/sass/components/_booking.scss
+++ b/sass/components/_booking.scss
@@ -1,5 +1,5 @@
 .double-section {
-  background-color: var($color-contacts-bg);
+  background-color: $color-contacts-bg;
 }
 
 .double-section .container {
@@ -27,20 +27,20 @@
   line-height: calc(15 / 11);
   letter-spacing: 0.1em;
   text-transform: uppercase;
-  color: var(--placeholder-text-color);
+  color: --placeholder-text-color;
   background-color: transparent;
   border: none;
-  border-bottom: 1px solid var($color-placeholder-text);
+  border-bottom: 1px solid $color-placeholder-text;
   cursor: pointer;
   transition-property: color;
   transition-duration: 250ms;
-  transition-timing-function: var($timing-function);
+  transition-timing-function: $timing-function;
 }
 
 .booking-form__input:focus,
 .booking-form__comment:focus {
-  color: var($color-main);
-  border-color: var($color-main);
+  color: $color-main;
+  border-color: $color-main;
   outline: none;
   text-transform: none;
 }
@@ -53,15 +53,15 @@
   line-height: calc(15 / 11);
   letter-spacing: 0.1em;
   text-transform: uppercase;
-  color: var($color-placeholder-text);
+  color: $color-placeholder-text;
   background-color: transparent;
   border: none;
-  border-bottom: 1px solid var($color-placeholder-text);
+  border-bottom: 1px solid $color-placeholder-text;
   cursor: pointer;
   margin-bottom: 44px;
   transition-property: color;
   transition-duration: 250ms;
-  transition-timing-function: var($timing-function);
+  transition-timing-function: $timing-function;
 }
 
 textarea {
