--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -28,12 +28,12 @@
 }
 
 .hero-title {
-    font-family: var($font-second);
+    font-family: $font-second;
     font-weight: 700;
     font-size: 72px;
     line-height: calc(85 / 72);
     letter-spacing: 0.05em;
-    color: var($color-main);
+    color: $color-main;
     margin-bottom: 20px;
 }
 
@@ -41,5 +41,5 @@
     font-size: 18px;
     line-height: calc(30 / 18);
     letter-spacing: 0.02em;
-    color: var($color-text-light);
+    color: $color-text-light;
 }
