--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 @import './base/global';
 
 @import './components/page-header';
+@import './components/mobile-menu';
 @import './components/hero';
 @import './components/slider';
 @import './components/modal';
