--- a/css/main.css
+++ b/css/main.css
@@ -181,6 +181,89 @@ p {
   display: flex;
 }
 
+.menu-toggle {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  min-height: 40px;
+  min-width: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  border-radius: 50%;
+  outline: none;
+}
+.menu-toggle:hover, .menu-toggle:focus {
+  fill: #ff6c00;
+}
+
+.menu-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 48px 40px;
+  background-color: #ffffff;
+  z-index: 999;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+  -webkit-transition: -webkit-transform 250ms ease-in-out;
+  transition: -webkit-transform 250ms ease-in-out;
+  transition: transform 250ms ease-in-out;
+  transition: transform 250ms ease-in-out, -webkit-transform 250ms ease-in-out;
+}
+
+.menu-container.is-open {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+
+.mobile-nav {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.menu-button .icon-cross {
+  display: none;
+}
+
+.menu-button.is-open .icon-cross {
+  display: block;
+}
+
+.menu-button.is-open .icon-menu {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .menu-toggle,
+.menu-container {
+    display: none;
+  }
+}
 .logo {
   position: absolute;
   top: 32px;
@@ -254,89 +337,16 @@ p {
   display: flex;
 }
 
-.menu-toggle {
-  position: absolute;
-  top: 10px;
-  right: 15px;
-  min-height: 40px;
-  min-width: 40px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin: 0;
-  padding: 0;
-  background-color: transparent;
-  cursor: pointer;
-  border: none;
-  border-radius: 50%;
-  outline: none;
+@media screen and (max-width: 767px) {
+  .header {
+    display: none;
+  }
 }
-.menu-toggle:hover, .menu-toggle:focus {
-  fill: #ff6c00;
-}
-
-.menu-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  padding: 48px 40px;
-  background-color: #ffffff;
-  z-index: 999;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-transform: translateX(100%);
-          transform: translateX(100%);
-  -webkit-transition: -webkit-transform 250ms ease-in-out;
-  transition: -webkit-transform 250ms ease-in-out;
-  transition: transform 250ms ease-in-out;
-  transition: transform 250ms ease-in-out, -webkit-transform 250ms ease-in-out;
-}
-
-.menu-container.is-open {
-  -webkit-transform: translateX(0);
-          transform: translateX(0);
-}
-
-.mobile-nav {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.menu-button .icon-cross {
-  display: none;
-}
-
-.menu-button.is-open .icon-cross {
-  display: block;
-}
-
-.menu-button.is-open .icon-menu {
-  display: none;
-}
-
 .hero {
   position: relative;
   top: 0;
   left: 0;
-  height: 680px;
-  background-image: url(../images/slider/slider1.jpg);
+  background-image: url(../images/hero/hero-bg1d@1x.jpg);
   background-repeat: no-repeat;
   background-position: right;
   overflow: hidden;
@@ -346,11 +356,27 @@ p {
   position: absolute;
   top: 0;
   left: 0;
-  height: 680px;
-  width: 1200px;
-  padding-right: 30px;
 }
 
+@media screen and (max-width: 767px) {
+  .hero {
+    background-image: url(../images/hero/hero-bg1m@1x.jpg);
+    background-size: cover;
+    background-position: center;
+    text-align: center;
+    height: 580px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .hero {
+    height: 680px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero {
+    height: 680px;
+  }
+}
 .hero-content {
   position: absolute;
   top: 0;
@@ -516,6 +542,12 @@ p {
   background-color: #ffffff;
 }
 
+@media screen and (max-width: 767px) {
+  .slider-buttons,
+.slider-pagination {
+    display: none;
+  }
+}
 .backdrop {
   position: fixed;
   top: 0;
@@ -852,6 +884,11 @@ p {
   background-color: #303030;
 }
 
+@media screen and (max-width: 767px) {
+  .media {
+    display: none;
+  }
+}
 .about {
   display: -webkit-box;
   display: -ms-flexbox;
