--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -15,6 +15,7 @@
     fill: $color-brand;
 }
 
+
 .header {
     position: absolute;
     top: 32px;
@@ -53,4 +54,10 @@
 .btn-light.head {
     margin-left: 45px;
     display: flex;
+}
+
+@media screen and (max-width: 767px) {
+    .header {
+        display: none;
+    }
 }
