--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -7,7 +7,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-
   margin: 0;
   padding: 0;
   background-color: transparent;
@@ -15,6 +14,7 @@
   border: none;
   border-radius: 50%;
   outline: none;
+  fill: $color-main;
   &:hover,
   &:focus {
     fill: $color-brand;
